--- a/app.json
+++ b/app.json
@@ -24,6 +24,10 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package":"com.amarantes.todotest"
     }
+
   }
 }
